# root_data_analysis_template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
